--- a/api/package.json
+++ b/api/package.json
@@ -3,6 +3,10 @@
   "version": "0.0.0",
   "private": true,
   "dependencies": {
+    "@prisma/client": "^2.3.0",
     "@redwoodjs/api": "^0.15.3"
+  },
+  "devDependencies": {
+    "@prisma/cli": "^2.3.0"
   }
 }
