--- a/web/package.json
+++ b/web/package.json
@@ -6,9 +6,11 @@
     "defaults"
   ],
   "dependencies": {
+    "@redwoodjs/auth": "^0.16.0",
     "@redwoodjs/router": "^0.16.0",
     "@redwoodjs/web": "^0.16.0",
     "filestack-react": "^3.2.1",
+    "netlify-identity-widget": "^1.9.1",
     "prop-types": "^15.7.2",
     "react": "^16.13.1",
     "react-dom": "^16.13.1"
